--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@solana/wallet-adapter-phantom": "^0.9.24",
     "axios": "^1.7.9",
     "body-parser": "^1.19.0",
     "dotenv": "^16.4.7",
